--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "no-underscore-dangle": [
+          "error",
+          { "allow": ["_id"] }
+        ]
+      }
 }
