--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ya.Student",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "validator": "^13.9.0"
